# tress

./: Cargo.toml  README.md  build.rs
src/: camera.rs  lib.rs  main.rs  model.rs  shader.wgsl  texture.rs
src/io/: mod.rs
src/render/: executor.rs  mod.rs  state.rs  wgpu_init.rs
src/shaders/: shader.wgsl
